bk_ida/gobmkida/c0/safety_to_string
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/safety_to_string/src/engine/printutils.c:815:24: error: use of undeclared identifier 'unk_4E3998'
return ( const char *)&unk_4E3998; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/safety_to_string/src/engine/printutils.c:819:24: error: use of undeclared identifier 'unk_4E39B6'
return ( const char *)&unk_4E39B6; 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/safety_to_string/src/obj/1/printutils.o] Error 1
